--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DetalleVehiculo"></activity>
-        <activity android:name=".AgregarVehiculo" />
+        <activity android:name=".DetalleVehiculo" android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".AgregarVehiculo" android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
